--- a/po/meson.build
+++ b/po/meson.build
@@ -1,2 +1,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 i18n.gettext(project_name, preset: 'glib')
+
+devenv.set('GRAPHS_OVERRIDE_LOCALEDIR', meson.current_build_dir())
