--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -19,20 +19,20 @@ data/ui/style_editor.blp
 data/ui/style_preview.blp
 data/ui/transform_window.blp
 data/ui/window.blp
-src/actions.py
-src/add_equation.py
-src/application.py
-src/curve_fitting.py
-src/data.py
-src/export_figure.py
-src/figure_settings.py
-src/file_import.py
-src/file_io.py
-src/item_box.py
-src/operations.py
-src/parse_file.py
-src/styles.py
-src/style_io.py
-src/transform_data.py
-src/ui.py
-src/utilities.py
+graphs/actions.py
+graphs/add_equation.py
+graphs/application.py
+graphs/curve_fitting.py
+graphs/data.py
+graphs/export_figure.py
+graphs/figure_settings.py
+graphs/file_import.py
+graphs/file_io.py
+graphs/item_box.py
+graphs/operations.py
+graphs/parse_file.py
+graphs/styles.py
+graphs/style_io.py
+graphs/transform_data.py
+graphs/ui.py
+graphs/utilities.py
