Add yapf config
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 count = True
 #default_ignorelist: E121,E123,E126,E226,E24,E704,W503,W504
-ignore = U101, W503, SCS108, N812
+ignore = U101, W503, SCS108
         # temporarily disable docstring related stuff
         D100, D101, D102, D103, D105, D107, D204, D205, D400, D401
 inline-quotes = double
@@ -10,3 +10,13 @@ per-file-ignores =
         migrate.py: SCS113
 exclude =
         _build
+
+
+[yapf]
+based_on_style = pep8
+coalesce_brackets = True
+dedent_closing_brackets = True
+split_all_top_level_comma_separated_values = True
+split_before_arithmetic_operator = True
+split_before_bitwise_operator = True
+split_before_logical_operator = True
