--- a/data/se.sjoerd.Graphs.appdata.xml.in.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in.in
@@ -6,7 +6,7 @@
   <name>Graphs</name>
   <summary>Plot and manipulate data</summary>
   <developer>
-    <name translatable="no">@AUTHOR@</name>
+    <name translate="no">@AUTHOR@</name>
     <id>se.sjoerd</id>
   </developer>
   <description>
@@ -56,7 +56,7 @@
   </screenshots>
   <releases>
     <release version="1.7.2" date="2024-02-05">
-      <description translatable="no">
+      <description>
         <p>Graphs is now part of GNOME Circle, the codebase has been moved to the GNOME GitLab. This patch changes updates 
         the metadata to reflect this, and adds some small quality-of-life changes.</p>
         <p>Full changelist:</p>
@@ -69,7 +69,7 @@
       </description>
     </release>
     <release version="1.7.1" date="2024-01-12">
-      <description translatable="no">
+      <description>
         <p>Minor patch with a few tweaks.</p>
         <ul>
           <li>Some strings were updated to use Title Case</li>
@@ -80,7 +80,7 @@
       </description>
     </release>
     <release version="1.7.0" date="2024-01-10">
-      <description translatable="no">
+      <description>
         <p>Version 1.7 marks our biggest release yet. With a migration to GNOME 45 and a new UI overhaul with a revamped style editor.
            Other major highlights include a new curve fitting functionality, the ability to open projects directly and support for gestures in the canvas. A full changelog
            can be found below:
@@ -141,7 +141,7 @@
       </description>
     </release>
     <release version="1.6.1" date="2023-06-14">
-      <description translatable="no">
+      <description>
         <p>Minor patch with some bug fixes:</p>
         <ul>
           <li>Fixed a bug where "Export Figure" and "Preferences" could not be loaded</li>
@@ -155,7 +155,7 @@
       </description>
     </release>
     <release version="1.6.0" date="2023-06-13">
-      <description translatable="no">
+      <description>
         <p>New in Graphs:</p>
         <ul>
           <li>Data can now be opened directly from project files.</li>
@@ -185,7 +185,7 @@
       </description>
     </release>
     <release version="1.5.2" date="2023-05-09">
-      <description translatable="no">
+      <description>
         <p>Changes:</p>
         <ul>
           <li>Add support for .xry file types from Leybold X-Ray apparatus.</li>
@@ -201,7 +201,7 @@
       </description>
     </release>
     <release version="1.5.1" date="2023-04-17">
-      <description translatable="no">
+      <description>
         <p>Hotfix update with bug fixes:</p>
         <ul>
           <li>Fixes a bug that prevents "Add Equation" from generating new data</li>
@@ -211,7 +211,7 @@
       </description>
     </release>
     <release version="1.5.0" date="2023-04-16">
-      <description translatable="no">
+      <description>
         <p>Major Highlights</p>
         <ul>
           <li>Massive UI overhaul</li>
@@ -259,7 +259,7 @@
       </description>
     </release>
     <release version="1.4.1" date="2023-01-30">
-      <description translatable="no">
+      <description>
         <p>Minor update with updated AppID.</p>
         <ul>
           <li>The sidebar is now retractable</li>
@@ -271,7 +271,7 @@
       </description>
     </release>
     <release version="1.4.0" date="2023-01-28">
-      <description translatable="no">
+      <description>
         <p>Major update with a significant UI overhaul.</p>
         <p>New in Graphs:</p>
         <ul>
@@ -296,7 +296,7 @@
       </description>
     </release>
     <release version="1.3.5" date="2023-01-14">
-      <description translatable="no">
+      <description>
         <p>Minor update with some bugfixes, plus a new logo!</p>
         <p>New in Graphs:</p>
         <ul>
@@ -310,7 +310,7 @@
       </description>
     </release>
     <release version="1.3.4" date="2023-01-05">
-      <description translatable="no">
+      <description>
         <p>Slightly bigger update than usual, with new features and some bug fixes.</p>
         <p>New in Graphs:</p>
         <ul>
@@ -337,7 +337,7 @@
       </description>
     </release>
     <release version="1.3.3" date="2023-01-03">
-      <description translatable="no">
+      <description>
         <p>Minor update mostly focused on the color picker, plus minor quality of life stuff.</p>
         <ul>
           <li>Changed the color picker to a pop-over window</li>
@@ -349,7 +349,7 @@
       </description>
     </release>
     <release version="1.3.2" date="2023-01-02">
-      <description translatable="no">
+      <description>
         <p>Minor update:</p>
         <ul>
           <li>Made all pop-up windows modal</li>
@@ -358,7 +358,7 @@
       </description>
     </release>
     <release version="1.3.1" date="2022-12-31">
-      <description translatable="no">
+      <description>
         <p>Brings some minor quality of life features.</p>
         <ul>
           <li>Ctrl+S now opens the Save Data dialog</li>
@@ -367,7 +367,7 @@
       </description>
     </release>
     <release version="1.3.0" date="2022-12-30">
-      <description translatable="no">
+      <description>
         <p>Probably last update of the year, most noteworthy is the ability to plot data on right and bottom axis independently. Operations on cutting data still work seamlessly, even when using different axes! Next few updates will probably mainly focus on polish and code clean-up.</p>
         <ul>
           <li>Added the option to plot data on the right-hand axis</li>
@@ -380,7 +380,7 @@
       </description>
     </release>
     <release version="1.2.1" date="2022-12-21">
-      <description translatable="no">
+      <description>
         <p>Hot-fix update, fixes some bugs with the new "plot settings" window</p>
         <ul>
           <li>Fixed a bug where the axes labels and title would go back to default when plot settings was opened twice</li>
@@ -392,7 +392,7 @@
       </description>
     </release>
     <release version="1.2.0" date="2022-12-21">
-      <description translatable="no">
+      <description>
         <p>With the ability to edit axes properties without changing the default settings, all essential features are in and it's time to declare v1.2.0. Also added some QoL features. Still many ideas are yet to be implemented. See current changelog below:</p>
         <ul>
           <li>The "Plot Settings" button now also contains a tab to edit the axes properties</li>
@@ -409,7 +409,7 @@
       </description>
     </release>
     <release version="1.1.2" date="2022-12-19">
-      <description translatable="no">
+      <description>
         <p>Minor update:</p>
         <ul>
           <li>Added a "Plot settings" option to control the individual line settings</li>
@@ -421,7 +421,7 @@
       </description>
     </release>
     <release version="1.1.1" date="2022-12-19">
-      <description translatable="no">
+      <description>
         <p>Minor update, next update will add an option to control individual line settings (e.g. thickness and style):</p>
         <ul>
           <li>Cleaned up preferences, making it easier to find the correct setting</li>
@@ -432,7 +432,7 @@
       </description>
     </release>
     <release version="1.1.0" date="2022-12-17">
-      <description translatable="no">
+      <description>
         <p>Major update:</p>
         <ul>
           <li>Improved the UI for the "Add equation" and "Transform data" windows</li>
@@ -446,7 +446,7 @@
       </description>
     </release>
     <release version="1.0.3" date="2022-12-16">
-      <description translatable="no">
+      <description>
         <p>Minor update with some bug fixes, next update will focus on adding more options for file imports:</p>
         <ul>
           <li>Fixed a bug where files with a special character in the name didn't save</li>
@@ -457,7 +457,7 @@
       </description>
     </release>
     <release version="1.0.2" date="2022-12-15">
-      <description translatable="no">
+      <description>
         <p>Name change and more bugfixes</p>
         <ul>
           <li>Changed the name of the application to be more in line with the GNOME HIG</li>
@@ -468,7 +468,7 @@
       </description>
     </release>
     <release version="1.0.1" date="2022-12-15">
-      <description translatable="no">
+      <description>
         <p>Minor update with some bugfixes</p>
         <ul>
           <li>Add equation window can now be closed with the escape button</li>
@@ -482,7 +482,7 @@
       </description>
     </release>
     <release version="1.0.0" date="2022-12-14">
-      <description translatable="no">
+      <description>
         <p>Initial release</p>
       </description>
     </release>
