--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ include:
   - project: "GNOME/citemplates"
     file: "flatpak/flatpak_ci_initiative.yml"
 
-.flatpak-vars:
+.vars:
   image: 'quay.io/gnome_infrastructure/gnome-runtime-images:gnome-46'
   variables:
     MANIFEST_PATH: se.sjoerd.Graphs.json
@@ -19,38 +19,14 @@ flatpak@x86_64:
   stage: build
   extends:
     - .flatpak@x86_64
-    - .flatpak-vars
+    - .vars
 
 # Build Flatpak for aarch64
 flatpak@aarch64:
   stage: build
   extends:
     - .flatpak@aarch64
-    - .flatpak-vars
-
-.snap-vars:
-  image: snapcore/snapcraft
-  script:
-    - snapcraft --version
-    - snapcraft
-    - ls -la
-  artifacts:
-    expire_in: 1 week
-    paths:
-      - "*.snap"
-
-# Build Snap for x86_64
-snap@x86_64:
-  stage: build
-  extends:
-    - .snap-vars
-
-# Build Snap for aarch64
-snap@aarch64:
-  stage: build
-  extends:
-    - .snap-vars
-  
+    - .vars
 
 flake8:
   stage: .pre
