--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,7 @@
 [flake8]
 count = True
 #default_ignorelist: E121,E123,E126,E226,E24,E704,W503,W504
-ignore = U101, W503, SCS108, N812
-        # temporarily disable docstring related stuff
-        D100, D101, D102, D103, D105, D107, D204, D205, D400, D401
+ignore = U101, W503, SCS108, N812, D107
 inline-quotes = double
 
 per-file-ignores =
