add all python files to POTFILES.in
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -22,18 +22,25 @@ data/ui/window.blp
 graphs/actions.py
 graphs/add_equation.py
 graphs/application.py
+graphs/artist.py
+graphs/canvas.py
 graphs/curve_fitting.py
 graphs/data.py
+graphs/edit_item.py
 graphs/export_figure.py
 graphs/figure_settings.py
 graphs/file_import.py
 graphs/file_io.py
+graphs/item.py
 graphs/item_box.py
+graphs/migrate.py
+graphs/misc.py
 graphs/operations.py
 graphs/parse_file.py
 graphs/project.py
-graphs/styles.py
+graphs/scales.py
 graphs/style_io.py
+graphs/styles.py
 graphs/transform_data.py
 graphs/ui.py
 graphs/utilities.py
