--- a/graphs/graphs.in
+++ b/graphs/graphs.in
@@ -47,10 +47,10 @@ if __name__ == "__main__":
     localedir = "@LOCALEDIR@"
     if os.environ.get('GRAPHS_OVERRIDE_LOCALEDIR'):
         localedir = os.environ.get('GRAPHS_OVERRIDE_LOCALEDIR')
-    locale.bindtextdomain("@PROJECT_NAME@", localedir)
-    locale.textdomain("@PROJECT_NAME@")
-    gettext.bindtextdomain("@PROJECT_NAME@", localedir)
-    gettext.textdomain("@PROJECT_NAME@")
+    locale.bindtextdomain("@GETTEXT_PACKAGE@", localedir)
+    locale.textdomain("@GETTEXT_PACKAGE@")
+    gettext.bindtextdomain("@GETTEXT_PACKAGE@", localedir)
+    gettext.textdomain("@GETTEXT_PACKAGE@")
 
     from gi.repository import Gio
     gresource_location = os.path.join("@PKGDATADIR@", "@APPLICATION_ID@.gresource")
@@ -66,8 +66,4 @@ if __name__ == "__main__":
     logging.getLogger("matplotlib.font_manager").disabled = True
 
     from graphs.application import PythonApplication
-    sys.exit(PythonApplication(
-        "@APPLICATION_ID@", version="@VERSION@", debug=debug,
-        author="@AUTHOR@", website="@HOMEPAGE_URL@", issues="@ISSUE_URL@",
-        pkgdatadir="@PKGDATADIR@",
-    ).run(sys.argv))
+    sys.exit(PythonApplication("@APPLICATION_ID@", debug=debug).run(sys.argv))
