add vala source files to POTFILES.in
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -22,25 +22,36 @@ data/ui/window.blp
 graphs/actions.py
 graphs/add_equation.py
 graphs/application.py
+graphs/application.vala
 graphs/artist.py
 graphs/canvas.py
 graphs/curve_fitting.py
+graphs/curve_fitting.vala
 graphs/data.py
+graphs/data.vala
 graphs/edit_item.py
 graphs/export_figure.py
 graphs/figure_settings.py
+graphs/figure_settings.vala
 graphs/file_import.py
 graphs/file_io.py
+graphs/file_io.inline-stack-switcher.vala
+graphs/interfaces.vala
 graphs/item.py
+graphs/item.vala
 graphs/item_box.py
 graphs/migrate.py
 graphs/misc.py
+graphs/misc.vala
 graphs/operations.py
 graphs/parse_file.py
 graphs/project.py
 graphs/scales.py
+graphs/smoothen_settings.vala
 graphs/style_io.py
 graphs/styles.py
 graphs/transform_data.py
 graphs/ui.py
 graphs/utilities.py
+graphs/utilities.vala
+graphs/window.vala
