fix CI attempt 4
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: python:3.11.1
-
 include:
   - project: "GNOME/citemplates"
     file: "flatpak/flatpak_ci_initiative.yml"
@@ -30,13 +28,17 @@ flatpak@aarch64:
     - .vars
 
 flake8:
+  image: python:3.11.1
   stage: .pre
   script:
     - pip install flake8 flake8-docstrings flake8-simplify flake8-unused-arguments flake8-quotes flake8-bugbear flake8-pie flake8-print flake8-warnings flake8-commas flake8-builtins flake8-import-order pep8-naming
     - flake8
 
 pages:
+  image: debian:latest
   script:
+    - apt-get update && apt-get upgrade
+    - apt-get install -y yelp-tools
     - sh "build-aux/build-help-html.sh"
     - chmod -R a=rwx public
   artifacts:
