--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ flake8:
 pages:
   image: debian:latest
   script:
-    - apt-get update && apt-get upgrade
+    - apt-get update && apt-get upgrade -y
     - apt-get install -y yelp-tools
     - sh "build-aux/build-help-html.sh"
     - chmod -R a=rwx public
