--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -11,14 +11,12 @@ configuration: conf,
 python.install_sources(
   files(
     'actions.py',
-    'add_equation.py',
     'application.py',
     'artist.py',
     'canvas.py',
     'curve_fitting.py',
     'data.py',
     'edit_item.py',
-    'export_figure.py',
     'figure_settings.py',
     'file_import.py',
     'file_io.py',
@@ -32,7 +30,6 @@ python.install_sources(
     'scales.py',
     'style_io.py',
     'styles.py',
-    'transform_data.py',
     'ui.py',
     'utilities.py',
   ),
@@ -45,16 +42,20 @@ graphs_lib = shared_library(
   'graphs',
   files(
     'about.vala',
+    'actions.vala',
+    'add_equation.vala',
     'application.vala',
+    'canvas.vala',
     'curve_fitting.vala',
     'data.vala',
+    'export_figure.vala',
     'figure_settings.vala',
-    'interfaces.vala',
     'item.vala',
     'inline-stack-switcher.vala',
     'misc.vala',
     'smoothen_settings.vala',
     'styles.vala',
+    'transform.vala',
     'utilities.vala',
     'window.vala',
   ), blueprints_hack, gresource_bundle,
