--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,8 @@ dependencies = [
   dependency('gobject-2.0'),
   dependency('gio-2.0'),
   dependency('gtk4'),
-  dependency('libadwaita-1', version: '>= 1.4'),
+  dependency('libadwaita-1', version: '>= 1.5'),
+  dependency('gee-0.8'),
 ]
 
 valac = meson.get_compiler('vala')
