--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,23 +21,24 @@ data/ui/transform.blp
 data/ui/window.blp
 graphs/about.vala
 graphs/actions.py
-graphs/add_equation.py
+graphs/actions.vala
+graphs/add_equation.vala
 graphs/application.py
 graphs/application.vala
 graphs/artist.py
 graphs/canvas.py
+graphs/canvas.vala
 graphs/curve_fitting.py
 graphs/curve_fitting.vala
 graphs/data.py
 graphs/data.vala
 graphs/edit_item.py
-graphs/export_figure.py
+graphs/export_figure.vala
 graphs/figure_settings.py
 graphs/figure_settings.vala
 graphs/file_import.py
 graphs/file_io.py
 graphs/inline-stack-switcher.vala
-graphs/interfaces.vala
 graphs/item.py
 graphs/item.vala
 graphs/item_box.py
@@ -52,7 +53,7 @@ graphs/smoothen_settings.vala
 graphs/style_io.py
 graphs/styles.py
 graphs/styles.vala
-graphs/transform_data.py
+graphs/transform.vala
 graphs/ui.py
 graphs/utilities.py
 graphs/utilities.vala
