--- a/data/meson.build
+++ b/data/meson.build
@@ -72,21 +72,23 @@ if compile_schemas.found()
 endif
 
 blueprints_source = [
-  'ui/add_equation.blp',
-  'ui/add_style.blp',
-  'ui/curve_fitting.blp',
+  'ui/add-equation.blp',
+  'ui/add-style.blp',
+  'ui/curve-fitting.blp',
   'ui/dialogs.blp',
-  'ui/edit_item.blp',
-  'ui/export_figure.blp',
-  'ui/figure_settings.blp',
-  'ui/fitting_parameters.blp',
+  'ui/edit-item.blp',
+  'ui/export-figure.blp',
+  'ui/figure-settings-dialog.blp',
+  'ui/figure-settings-page.blp',
+  'ui/fitting-parameters.blp',
   'ui/import.blp',
-  'ui/help_overlay.blp',
-  'ui/item_box.blp',
-  'ui/smoothen_settings.blp',
-  'ui/style_color_box.blp',
-  'ui/style_editor.blp',
-  'ui/style_preview.blp',
+  'ui/import-columns.blp',
+  'ui/item-box.blp',
+  'ui/shortcuts.blp',
+  'ui/smoothen-settings.blp',
+  'ui/style-color-box.blp',
+  'ui/style-editor.blp',
+  'ui/style-preview.blp',
   'ui/transform.blp',
   'ui/window.blp'
 ]
