--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,21 +2,21 @@
 data/se.sjoerd.Graphs.appdata.xml.in.in
 data/se.sjoerd.Graphs.desktop.in.in
 data/se.sjoerd.Graphs.gschema.xml
-data/ui/add_equation.blp
-data/ui/add_style.blp
-data/ui/curve_fitting.blp
+data/ui/add-equation.blp
+data/ui/add-style.blp
+data/ui/curve-fitting.blp
 data/ui/dialogs.blp
-data/ui/edit_item.blp
-data/ui/export_figure.blp
-data/ui/figure_settings.blp
-data/ui/fitting_parameters.blp
-data/ui/help_overlay.blp
+data/ui/edit-item.blp
+data/ui/export-figure.blp
+data/ui/figure-settings.blp
+data/ui/fitting-parameters.blp
 data/ui/import.blp
-data/ui/item_box.blp
-data/ui/smoothen_settings.blp
-data/ui/style_color_box.blp
-data/ui/style_editor.blp
-data/ui/style_preview.blp
+data/ui/item-box.blp
+data/ui/shortcuts.blp
+data/ui/smoothen-settings.blp
+data/ui/style-color-box.blp
+data/ui/style-editor.blp
+data/ui/style-preview.blp
 data/ui/transform.blp
 data/ui/window.blp
 graphs/about.vala
@@ -37,6 +37,7 @@ graphs/export_figure.vala
 graphs/figure_settings.py
 graphs/figure_settings.vala
 graphs/file_import.py
+graphs/file_import.vala
 graphs/file_io.py
 graphs/inline-stack-switcher.vala
 graphs/item.py
