--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -64,7 +64,7 @@ graphs_lib = shared_library('graphs',
     'transform.vala',
     'utilities.vala',
     'window.vala',
-  ), blueprints_hack, previews_hack, gresource_bundle,
+  ), gresource_hack, gresource_bundle,
              vala_gir: 'Graphs-1.gir',
          dependencies: dependencies + config_dep,
   include_directories: include_directories('.'),
